--- a/styles.css
+++ b/styles.css
@@ -312,6 +312,9 @@ footer {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    display: block;
+    margin: 0 auto;
+    /* Alineación horizontal al centro */
 }
 
 #mostrar-frases:hover {
